<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFragmentConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/username_hint_text"
        android:ems="10"
        android:hint="@string/username_hint_text"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="?colorOnBackground"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/password_hint_text"
        android:ems="10"
        android:hint="@string/password_hint_text"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="?colorOnBackground"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>
